# nomnivore

./: README.md  pyproject.toml
.github/workflows/: publish.yml
nomnivore/: __init__.py  json_payload.py  pyodbc_.py  sftp.py
nomnivore/tests/: pyodbc__test.py
