[project]
name = "nomnivore"
version = "1.0.0"
authors = [
  { name="Erik Bremstedt", email="erik@bremstedt.se" },
]
description = "Read from sources and stuff"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ebremstedt/nomnivore"
Issues = "https://github.com/ebremstedt/nomnivore/issues"
